# worse

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  IMPROVED_ALGORITHMS.md  POWER_INFRASTRUCTURE_ANALYSIS.md  README.md
Engine/Binary/Models/Cube/: cube.glb
Engine/Programs/: Application.cpp  Application.hpp  CMakeLists.txt  Editor.cpp  Entry.cpp  Functions.cpp  Infrastructure.hpp  Process.cpp  World.hpp
Engine/Programs/Application/: Application.cpp  Application.hpp  Input.cpp  World.hpp
Engine/Programs/Game/: CMakeLists.txt  Entry.cpp
Engine/Programs/Layout/: LeftPanel.cpp  Main.cpp  RightPanel.cpp  StatusPanel.cpp  ToolbarPanel.cpp
Engine/Programs/Operation/: Cloud.cpp  CloudStorage.cpp  CloudStorage.hpp  Setup.cpp  View.cpp  View.hpp
Engine/Programs/PointCloud/: CMakeLists.txt  Cloud.cpp  Cloud.hpp  Infrastructure.hpp  Process.cpp  Process.hpp
Engine/Shaders/: BloomBrightFilter.hlsl  BloomDownSample.hlsl  BloomLuminance.hlsl  BloomUpscale.hlsl  Common.hlsl  CommonStructs.hlsl  Compute.hlsl  DepthLight.hlsl  DepthPrepass.hlsl  Distortion.hlsl  GBuffer.hlsl  Kuwahara.hlsl  Light.hlsl  Line.hlsl  PBR.hlsl  Placeholder.hlsl  Point.hlsl  PostFX.hlsl  ShadowMapping.hlsl  Utils.hlsl  bindings.hlsl  quad.hlsl
Engine/Source/: CMakeLists.txt
Engine/Source/Examples/: CMakeLists.txt  Example00.cpp
Engine/Source/Examples/ECS/: ecs_perf.cpp
Engine/Source/Runtime/: CMakeLists.txt
Engine/Source/Runtime/Asset/: CMakeLists.txt
Engine/Source/Runtime/Asset/Private/: TextureImporter.cpp
Engine/Source/Runtime/Asset/Public/: TextureImporter.hpp
Engine/Source/Runtime/Core/: CMakeLists.txt
Engine/Source/Runtime/Core/Private/: Camera.cpp  Engine.cpp  Event.cpp  FileSystem.cpp  Log.cpp  Window.cpp
Engine/Source/Runtime/Core/Private/Input/: Controller.cpp  Input.cpp  InputGamepad.cpp  InputKeyboard.cpp  InputMouse.cpp
Engine/Source/Runtime/Core/Private/Math/: BoundingBox.cpp
Engine/Source/Runtime/Core/Public/: Camera.hpp  Color.hpp  Definitions.hpp  Event.hpp  FileSystem.hpp  Log.hpp  Platform.hpp  RHITypes.hpp  Types.hpp  Window.hpp
Engine/Source/Runtime/Core/Public/Input/: Controller.hpp  Input.hpp
Engine/Source/Runtime/Core/Public/Math/: Base.hpp  BoundingBox.hpp  Hash.hpp  Math.hpp  Matrix.hpp  Quaternion.hpp  Rectangle.hpp  Transform.hpp  Vector.hpp  Vector2.hpp
Engine/Source/Runtime/Core/Public/Profiling/: Stopwatch.hpp
Engine/Source/Runtime/ECS/: CMakeLists.txt
Engine/Source/Runtime/ECS/Private/: ECS.cpp
Engine/Source/Runtime/ECS/Public/: Entity.hpp  IndexSet.hpp  Prefab.hpp  QueryView.hpp  Storage.hpp  World.hpp
Engine/Source/Runtime/ECS/Public/ECS/: Commands.hpp  Config.hpp  Entity.hpp  EventBus.hpp  IndexSet.hpp  QueryView.hpp  Registry.hpp  Resource.hpp  Schedule.hpp  Storage.hpp  System.hpp  TypeList.hpp
Engine/Source/Runtime/Engine/: CMakeLists.txt
Engine/Source/Runtime/Engine/Private/: Engine.cpp
Engine/Source/Runtime/Engine/Public/: Engine.hpp
Engine/Source/Runtime/FileSystem/: CMakeLists.txt
Engine/Source/Runtime/FileSystem/Private/: FileStream.cpp  FileSystem.cpp
Engine/Source/Runtime/FileSystem/Public/: FileStream.hpp  FileSystem.hpp
Engine/Source/Runtime/RHI/: CMakeLists.txt
Engine/Source/Runtime/RHI/Private/: DXCompiler.cpp  RHICommandList.cpp  RHIDescriptorSet.cpp  RHIDescriptorSetLayout.cpp  RHIPipeline.cpp  RHIPipelineState.cpp  RHIQueue.cpp  RHISampler.cpp  RHIShader.cpp  RHISyncPrimitive.cpp  RHITexture.cpp  RHIViewport.cpp
Engine/Source/Runtime/RHI/Private/Vulkan/: VulkanBuffer.cpp  VulkanCommandList.cpp  VulkanDescriptor.cpp  VulkanDescriptor.hpp  VulkanDescriptorSet.cpp  VulkanDescriptorSetLayout.cpp  VulkanDevice.cpp  VulkanPipeline.cpp  VulkanQueue.cpp  VulkanSampler.cpp  VulkanShader.cpp  VulkanSwapchain.cpp  VulkanSyncPrimitive.cpp  VulkanTexture.cpp
Engine/Source/Runtime/RHI/Public/: DXCompiler.hpp  RHIBuffer.hpp  RHICommandList.hpp  RHIDefinitions.hpp  RHIDescriptor.hpp  RHIDescriptorSetLayout.hpp  RHIDevice.hpp  RHIQueue.hpp  RHIResource.hpp  RHISampler.hpp  RHIShader.hpp  RHISwapchain.hpp  RHISyncPrimitive.hpp  RHITexture.hpp  RHIVertex.hpp  RHIViewport.hpp
Engine/Source/Runtime/RHI/Public/Descriptor/: RHIBuffer.hpp  RHIDescriptor.hpp  RHIDescriptorSet.hpp  RHIDescriptorSetLayout.hpp  RHISampler.hpp  RHITexture.hpp
Engine/Source/Runtime/RHI/Public/Pipeline/: RHIBlendState.hpp  RHIDepthStencilState.hpp  RHIPipeline.hpp  RHIPipelineState.hpp  RHIRasterizerState.hpp
Engine/Source/Runtime/Renderer/: CMakeLists.txt
Engine/Source/Runtime/Renderer/Private/: AssetServer.cpp  ImGuiRenderer.cpp  Material.cpp  Mesh.cpp  RenderPass.cpp  Renderer.cpp  RendererResource.cpp
Engine/Source/Runtime/Renderer/Private/Scene/: Hierarchy.cpp
Engine/Source/Runtime/Renderer/Private/glTF/: MathElementTraits.hpp  glTF.cpp
Engine/Source/Runtime/Renderer/Public/: AssetServer.hpp  Camera.hpp  ImGuiRenderer.hpp  Material.hpp  Mesh.hpp  Renderable.hpp  Renderer.hpp  RendererBuffer.hpp  RendererDefinitions.hpp
Engine/Source/Runtime/Renderer/Public/Geometry/: GeometryGeneration.hpp
Engine/Source/Runtime/Renderer/Public/Scene/: Hierarchy.hpp  Structure.hpp
Engine/Source/Runtime/Renderer/Public/glTF/: glTF.hpp
Engine/Source/Sandbox/: CMakeLists.txt  Editor.cpp  Entry.cpp  Functions.cpp  Keys.cpp  PCL.cpp  Process.cpp  World.hpp  ecs.cpp  main.cpp  math.cpp  shader.cpp
Engine/Source/Sandbox/PointCloud/: BMPWriter.hpp  CMakeLists.txt  PreProcess.cpp  PreProcess.hpp
